# quantum-ml-prediction-pipeline

./: .env.example  .gitignore  Makefile  README.md  SUBMISSION.md  benchmark.html  benchmark.ipynb  dataprocessing.html  dataprocessing.ipynb  pyproject.toml
data/hw2/: README.md  feature_policy.json  split_summary.json  test.parquet  validation.parquet
docs/: architecture.md  baseline-model.md  data-flow.md  milestone-reports.md  reliability-regression.md  thesis-chapter-mapping.md
experiments/: README.md
experiments/configs/: baseline.yaml  fidelity_regression.yaml  model_suite.yaml  model_suite_baseline_raw.yaml  model_suite_topology_aware.yaml  nisq_reliability.yaml  qubit_stratified.yaml  release_reliability_125k.yaml  release_reliability_125k_ablation.yaml  reliability_regression.yaml  tuned_classification.yaml
experiments/release_ablation/20260321_112646/: audit_summary.json  grouped_split_audit.json  run_config.yaml
experiments/release_ablation/20260321_112646/both/: feature_policy.json  model_comparison.csv  slice_metrics.csv
experiments/release_ablation/20260321_112646/both/dummy_mean/: grouped_cv_results.csv  slice_metrics.csv  variant_gap_diagnostic.json  worst_slices.csv
experiments/release_ablation/20260321_112646/both/random_forest_regressor/: family_dominance.csv  feature_importance.csv  grouped_cv_results.csv  metrics.json  permutation_importance.csv  slice_metrics.csv  variant_gap_diagnostic.json  worst_slices.csv
experiments/release_ablation/20260321_112646/raw_only/: grouped_split_audit.json  model_comparison.csv  slice_metrics.csv
experiments/release_ablation/20260321_112646/transpiled_only/: model_comparison.csv  slice_metrics.csv
experiments/release_ablation/20260321_125545/: ablation_model_comparison.csv  best_model_by_ablation.csv  best_model_slice_metrics.csv  best_overall_worst_slices.csv  difficulty_bucket_config.json  feature_manifest_used.json  local_feature_gain_diagnostic.json  run_config.yaml  split_manifest_used.json  suite_slice_metrics.csv  summary.md  variant_gap_diagnostics.csv
experiments/release_ablation/20260321_125545/both/: slice_metrics.csv
experiments/release_ablation/20260321_125545/both_with_local_features/: feature_policy.json  model_comparison.csv  slice_metrics.csv
experiments/release_ablation/20260321_125545/both_without_local_features/: feature_policy.json  grouped_split_audit.json  model_comparison.csv  slice_metrics.csv
experiments/release_ablation/20260321_125545/raw_only/: feature_policy.json  model_comparison.csv  slice_metrics.csv
experiments/release_ablation/20260321_125545/transpiled_only/: feature_policy.json  model_comparison.csv  slice_metrics.csv
experiments/reliability_baseline/20260315_193625/: feature_policy.json  metrics.json  model_comparison.csv  run_config.yaml  split_summary.json  summary.md
experiments/reliability_baseline/20260315_193625/dummy_mean/: metrics.json
experiments/reliability_baseline/20260315_193625/random_forest_regressor/: feature_importance.csv  metrics.json
experiments/reliability_baseline/20260315_193625/xgboost_regressor/: metrics.json
experiments/reliability_baseline/20260315_193750/: feature_policy.json  metrics.json  model_comparison.csv  run_config.yaml  summary.md  target_summary.json
experiments/reliability_baseline/20260315_193750/dummy_mean/: metrics.json
experiments/reliability_baseline/20260315_193750/random_forest_regressor/: metrics.json
experiments/reliability_baseline/20260315_193750/xgboost_regressor/: feature_importance.csv  metrics.json
notebooks/: 01_eda_starter.ipynb
reports/experiments/: master_experiment_inventory.json  master_experiment_matrix.csv
reports/milestone_configs/: 20260313_leakage_free_classification.yaml
reports/milestones/: 20260313_leakage_free_classification.json  20260313_leakage_free_classification.md  20260313_leakage_free_classification.schema.json
src/: __init__.py
src/config/: __init__.py  io.py  schema.py
src/data/: __init__.py  dataset.py  nisq_dataset.py  prepare.py  prepare_data.py  release_package.py  run_eda.py
src/evaluation/: __init__.py  metrics.py
src/features/: __init__.py  build_features.py  dataset_profile.py  gate_sequence.py
src/models/: __init__.py  baseline.py  classification_features.py  evaluate_release_regression.py  grouped_split_validation.py  mlflow_tracking.py  model_suite.py  model_suite_artifacts.py  random_forest.py  regression_suite.py  release_evaluation.py  release_thesis_pipeline.py  reliability_regression.py  run_shap_analysis.py  splitting.py  subset_filters.py  train_baseline.py  train_fidelity_regression.py  train_model_suite.py  train_qubit_stratified_suite.py  train_release_ablation.py  train_release_regression.py  train_reliability_regression.py  train_rf_baseline.py  tune_classifiers.py
src/reporting/: __init__.py  build_experiment_summary.py  experiment_summary.py  generate_milestone_report.py  milestone_reports.py  models.py
src/reporting/templates/: milestone_report.md.tpl
src/visualization/: __init__.py  plots.py
tests/: test_config.py  test_experiment_summary.py  test_feature_engineering.py  test_grouped_split_validation.py  test_milestone_reports.py  test_model_suite.py  test_nisq_dataset.py  test_qubit_stratified_suite.py  test_regression_suite.py  test_release_package.py  test_release_thesis_pipeline.py  test_reliability_regression.py  test_subset_filters.py
(+244 files in other folders)
