[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nisq-ml-predictor"
version = "0.1.0"
description = "Research repository for ML-based reliability prediction of NISQ circuits."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Kuba Coufal" }]
dependencies = [
  "joblib>=1.4.0",
  "matplotlib>=3.9.0",
  "mlflow>=2.20.0",
  "numpy>=1.26.0",
  "pandas>=2.2.0",
  "pyarrow>=17.0.0",
  "pydantic>=2.9.0",
  "PyYAML>=6.0.2",
  "scikit-learn>=1.5.0",
  "shap>=0.46.0",
  "xgboost>=2.1.0",
]

[project.optional-dependencies]
dev = [
  "black>=25.0.0",
  "mypy>=1.13.0",
  "pytest>=8.3.0",
  "ruff>=0.8.0",
  "types-PyYAML>=6.0.12",
]
notebook = [
  "ipykernel>=6.29.0",
  "notebook>=7.3.0",
]

[project.scripts]
qfc-build-features = "src.features.build_features:main"
qfc-eda = "src.data.run_eda:main"
qfc-prepare-data = "src.data.prepare_data:main"
qfc-train-fidelity-regression = "src.models.train_fidelity_regression:main"
qfc-train-reliability-regression = "src.models.train_reliability_regression:main"
qfc-train-model-suite = "src.models.train_model_suite:main"
qfc-train-qubit-stratified = "src.models.train_qubit_stratified_suite:main"
qfc-train-release-ablation = "src.models.train_release_ablation:main"
qfc-train-release-regression = "src.models.train_release_regression:main"
qfc-train-rf-baseline = "src.models.train_rf_baseline:main"
qfc-tune-classifiers = "src.models.tune_classifiers:main"
qfc-run-shap-analysis = "src.models.run_shap_analysis:main"
qfc-evaluate-release-regression = "src.models.evaluate_release_regression:main"
qfc-generate-milestone-report = "src.reporting.generate_milestone_report:main"
qfc-build-experiment-summary = "src.reporting.build_experiment_summary:main"

[tool.setuptools.package-dir]
"" = "."

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["notebooks/*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
pretty = true
warn_unused_ignores = true
